# entangled-node

./: .gitignore  .gitmodules  .prettierrc  .travis.yml  CMakeLists.txt  README.md  binding.gyp  entangled.d.ts  entangled.js  iota_common.js  package-lock.json  package.json
.github/workflows/: codeql-analysis.yml  prebuild.yml  tests.yml
scripts/: patch_windows.js
src/: interface.cpp  upload.js
src/embear/: logger.h
src/keccak/: KeccakF-1600-reference.c  KeccakHash.c  KeccakHash.h  KeccakP-1600-SnP.h  KeccakP-1600-reference.c  KeccakSponge-common.h  KeccakSpongeWidth1600.c  KeccakSpongeWidth1600.h  README.md  align.h  brg_endian.h
src/utarray/: utarray.h
test/: entangled.js  iota_common.js
